--- a/pom.xml
+++ b/pom.xml
@@ -21,23 +21,43 @@
     <scala.version>2.8.0</scala.version>
   </properties>
 
-<!--
-  <repositories>
-    <repository>
-      <id>scala-tools.org</id>
-      <name>Scala-Tools Maven2 Repository</name>
-      <url>http://scala-tools.org/repo-releases</url>
-    </repository>
-  </repositories>
+    <distributionManagement>
+        <repository>
+            <id>sonatype</id>
+            <name>Sonatype</name>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+        </repository>
+        <snapshotRepository>
+            <id>sonatype</id>
+            <name>Sonatype</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
 
-  <pluginRepositories>
-    <pluginRepository>
-      <id>scala-tools.org</id>
-      <name>Scala-Tools Maven2 Repository</name>
-      <url>http://scala-tools.org/repo-releases</url>
-    </pluginRepository>
-  </pluginRepositories>
--->
+    <scm>
+        <url>https://github.com/p1tch81ack/familysearch-simpledb/src</url>
+        <connection>ssh://git@ssh.github.com:443/p1tch81ack/familysearch-simpledb.git</connection>
+        <developerConnection>ssh://git@ssh.github.com:443/p1tch81ack/familysearch-simpledb.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
+
+    <!--
+      <repositories>
+        <repository>
+          <id>scala-tools.org</id>
+          <name>Scala-Tools Maven2 Repository</name>
+          <url>http://scala-tools.org/repo-releases</url>
+        </repository>
+      </repositories>
+
+      <pluginRepositories>
+        <pluginRepository>
+          <id>scala-tools.org</id>
+          <name>Scala-Tools Maven2 Repository</name>
+          <url>http://scala-tools.org/repo-releases</url>
+        </pluginRepository>
+      </pluginRepositories>
+    -->
   <dependencies>
     <dependency>
       <groupId>org.scala-lang</groupId>
