--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.familysearch.joetools.simpledb</groupId>
   <artifactId>familysearch-simpledb</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.2-SNAPSHOT</version>
   <name>${project.artifactId}</name>
   <description>My wonderfull scala app</description>
   <inceptionYear>2010</inceptionYear>
@@ -36,8 +36,8 @@
 
     <scm>
         <url>https://github.com/p1tch81ack/familysearch-simpledb/src</url>
-        <connection>ssh://git@ssh.github.com:443/p1tch81ack/familysearch-simpledb.git</connection>
-        <developerConnection>ssh://git@ssh.github.com:443/p1tch81ack/familysearch-simpledb.git</developerConnection>
+        <connection>scm:git:ssh://git@ssh.github.com:443/p1tch81ack/familysearch-simpledb.git</connection>
+        <developerConnection>scm:git:ssh://git@ssh.github.com:443/p1tch81ack/familysearch-simpledb.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
 
