--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,26 @@
           </includes>
         </configuration>
       </plugin>
+        <plugin>
+            <artifactId>maven-release-plugin</artifactId>
+                    <version>2.4.1</version>
+            <configuration>
+                <releaseProfiles>release</releaseProfiles>
+                <goals>install animal-sniffer:check deploy site</goals>
+            </configuration>
+                    <dependencies>
+                      <dependency>
+                        <groupId>org.apache.maven.scm</groupId>
+                        <artifactId>maven-scm-api</artifactId>
+                        <version>1.8.1</version>
+                      </dependency>
+                      <dependency>
+                        <groupId>org.apache.maven.scm</groupId>
+                        <artifactId>maven-scm-provider-gitexe</artifactId>
+                        <version>1.8.1</version>
+                      </dependency>
+                    </dependencies>
+        </plugin>
     </plugins>
   </build>
 </project>
