--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
       <version>4.8.1</version>
       <scope>test</scope>
     </dependency>
+<!--
     <dependency>
       <groupId>org.scala-tools.testing</groupId>
       <artifactId>specs_${scala.version}</artifactId>
@@ -84,11 +85,12 @@
       <version>1.2</version>
       <scope>test</scope>
     </dependency>
+    -->
   </dependencies>
 
   <build>
     <sourceDirectory>src/main/scala</sourceDirectory>
-    <testSourceDirectory>src/test/scala</testSourceDirectory>
+    <testSourceDirectory>src/test</testSourceDirectory>
     <plugins>
       <plugin>
         <groupId>org.scala-tools</groupId>
@@ -110,6 +112,7 @@
           </execution>
         </executions>
       </plugin>
+        <!--
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -117,14 +120,15 @@
         <configuration>
           <useFile>false</useFile>
           <disableXmlReport>true</disableXmlReport>
-          <!-- If you have classpath issue like NoDefClassError,... -->
-          <!-- useManifestOnlyJar>false</useManifestOnlyJar -->
+          <!- If you have classpath issue like NoDefClassError,... ->
+          <!- useManifestOnlyJar>false</useManifestOnlyJar ->
           <includes>
             <include>**/*Test.*</include>
             <include>**/*Suite.*</include>
           </includes>
         </configuration>
       </plugin>
+    -->
         <plugin>
             <artifactId>maven-release-plugin</artifactId>
                     <version>2.4.1</version>
