changed storage of indexing for queries so it can be made more dynamic

--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,5 @@ build.log
 #  syntax: regexp
 #  ^\.pc/
 
-#SHITTY output not in target directory
+#useless output not in target directory
 build.log
